[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# Project information
name = "laminar"
description = "The workflow framework that works for you."
authors = [
  { name = "Ryan Chui", email = "ryan.w.chui@gmail.com" }
]

# Package information
requires-python = ">=3.8"
dynamic = ["version", "readme", "dependencies", "optional-dependencies"]

# Project metadata
license = { file = "LICENSE" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
  "Operating System :: Unix",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Internet",
  "Typing :: Typed",
]
urls = { Homepage = "https://github.com/rchui/laminar", Documentation = "https://rchui.github.io/laminar/html/index.html" }

[tool.setuptools]
include-package-data = true
packages = { find = { include = ["laminar*"], exclude = ["*tests*", "test_*", "*_test"] } }

[tool.setuptools.dynamic]
version = { attr = "laminar.version.VERSION" }
readme = { file = "README.md", content-type = "text/markdown" }
dependencies = { file = "requirements.txt" }

[tool.setuptools.dynamic.optional-dependencies]
dev = { file = "requirements.dev.txt" }

[tool.black]
exclude = '''
(
  /(
    | \.venv
  )/
)
'''
line-length = 120
preview = true

[tool.coverage.report]
exclude_lines = [
  "pragma: not covered",
  "@overload",
]

[tool.flake8]
exclude = [
  ".venv",
]
ignore = [
  "E221",
  "E251",
  "W503",
  "E203",
]
max-complexity = 10
max-line-length = 120

[tool.isort]
line_length = 120
profile = "black"

[tool.mypy]
follow_imports = "silent"
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

strict = true

[tool.pytest.ini_options]
addopts = "-vv --durations 10 --failed-first --strict-markers"
markers = [
  "asyncio",
  "flow",
]
