[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
# Project information
name = "laminar"
description = "The workflow framework that works for you."
authors = [
  { name = "Ryan Chui", email = "ryan.w.chui@gmail.com" }
]

# Package information
requires-python = ">=3.10"
dynamic = ["version", "readme"]

dependencies = [
  "boto3",
  "boto3-stubs[batch]",
  "cloudpickle",
  "smart_open",
  "svix-ksuid",
]

# Project metadata
license = { file = "LICENSE" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
  "Operating System :: Unix",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Internet",
  "Typing :: Typed",
]
urls = { Homepage = "https://github.com/rchui/laminar", Documentation = "https://rchui.github.io/laminar/html/index.html" }

[dependency-groups]
dev = [
  "build",
  "coverage[toml]",
  "mypy",
  "myst-parser",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "rstcheck",
  "ruff",
  "sphinx",
  "sphinx-immaterial",
  "sphinxcontrib-mermaid",
  "twine",
]

[tool.setuptools]
include-package-data = true
packages = { find = { include = ["laminar*"], exclude = ["*tests*", "test_*", "*_test"] } }

[tool.setuptools.dynamic]
version = { attr = "laminar.version.VERSION" }
readme = { file = "README.md", content-type = "text/markdown" }

[tool.coverage.report]
exclude_lines = [
  "pragma: not covered",
  "@overload",
]

[tool.mypy]
python_version = "3.10"
follow_imports = "silent"
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

strict = true

[tool.pytest.ini_options]
addopts = "-vv --durations 10 --failed-first --strict-markers"
markers = [
  "asyncio",
  "flow",
]

[tool.ruff]
line-length = 120
target-version = "py310"

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "PGH", "UP"]
ignore = [
    "E701",    # Multiple statements on one line (colon)
    "PGH003",  # Use specific rule codes when ignoring type issues
    "PGH004",  # Use specific rule codes when using `noqa`
]

[tool.ruff.format]
docstring-code-format = true
